Fix map overlapping with the search bar
On Wide screens, the map overlapped the search bar. This commit fixes that.

--- a/css/jquery.uls.css
+++ b/css/jquery.uls.css
@@ -167,6 +167,7 @@ input:focus#languagefilter {
 }
 
 #search{
+	position: relative;
 	background: #f8f8f8;
 	background: linear-gradient(#F0F0F0, #FBFBFB);
 	background: -webkit-gradient(linear, left top, left bottom, from(#F0F0F0), to(#FBFBFB));
